--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name">
+
+	<label for="phone">Phone Number</label>
+	<input type="text" placeholder="Phone Number">
+
+    <label for="address">Address</label>
+	<input type="text" id="checkbox">
+	
+	<label for="checkbox">Have you ever lived with a Dog before?</label>
+	<input type="checkbox" id="checkbox">
+
+	<label for="multiSelect">Please select your preferred breeds</label>
+	<select id="multiSelect" >
+		<option>Labradoor</option>
+		<option>Golden retriver</option>
+		<option>Street Dogs</option>
+	</select>
+
+	<button type="submit" id="submit">Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
