--- a/main.html
+++ b/main.html
@@ -8,17 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<label for="name">Name</label>
+	<form action="#" method="post">
+		<label for="name">Name</label>
 	<input type="text" id="name" placeholder="Name">
 
 	<label for="phone">Phone Number</label>
-	<input type="text" placeholder="Phone Number">
+	<input type="text" placeholder="Phone Number" id="phone">
 
     <label for="address">Address</label>
-	<input type="text" id="checkbox">
+	<input type="text" id="address" placeholder="address">
 	
 	<label for="checkbox">Have you ever lived with a Dog before?</label>
-	<input type="checkbox" id="checkbox">
+	<input type="checkbox" id="checkbox" placeholder="checkbox">
 
 	<label for="multiSelect">Please select your preferred breeds</label>
 	<select id="multiSelect" >
@@ -27,7 +28,9 @@
 		<option>Street Dogs</option>
 	</select>
 
-	<button type="submit" id="submit">Submit</button>
+	<button type="submit" id="submit">Submit</butt
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
