--- a/main.html
+++ b/main.html
@@ -15,11 +15,13 @@
 	<label for="phone">Phone Number</label>
 	<input type="text" placeholder="Phone Number" id="phone">
 
-    <label for="address">Address</label>
-	<input type="text" id="address" placeholder="address">
+<!--     <label for="address">Address</label>
+	<input type="text" id="address" placeholder="address"> -->
+	<label for="address">Address</label>
+    <input type="text" id="address" placeholder="Address">	
 	
 	<label for="checkbox">Have you ever lived with a Dog before?</label>
-	<input type="checkbox" id="checkbox" placeholder="checkbox">
+	<input type="checkbox" id="checkbox" value="somevalue" placeholder="checkbox">
 
 	<label for="multiSelect">Please select your preferred breeds</label>
 	<select id="multiSelect" >
