--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 		<option>Street Dogs</option>
 	</select>
 
-	<button type="submit" id="submit">Submit</butt
+	<button type="submit" id="submit" value="Submit">Submit</butt
 	</form>
 	
     <script type="text/javascript" src="./script.js">
