--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="#" method="post">
+<!-- 	<form action="#" method="post">
 		<label for="name">Name</label>
 	<input type="text" id="name" placeholder="Name">
 
@@ -17,7 +17,7 @@
 
 <!--     <label for="address">Address</label>
 	<input type="text" id="address" placeholder="address"> -->
-	<label for="address">Address</label>
+<!-- 	<label for="address">Address</label>
     <input type="text" id="address" placeholder="Address">	
 	
 	<label for="checkbox">Have you ever lived with a Dog before?</label>
@@ -31,6 +31,35 @@
 	</select>
 
 	<button type="submit" id="submit" value="Submit">Submit</butt
+	</form> -->
+	<form method="post">
+		
+		<label for="name">Name</label>
+		<input id="name" type="text" placeholder="Name" required><br>
+ 
+		<label for="phone">Phone Number</label>
+		<input id="phone" type="text" placeholder="Phone Number">
+ 
+		<label for="address">Address</label>
+		<input id="address" type="text" placeholder="Address">
+ 
+        <label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?">
+		
+		<!--Drop down-->
+		
+		<label for="multiSelect" >Please select your preferred breeds</label>
+		
+		<select name="multiSelect" id="multiSelect">
+         <option value="german shepherd">German Shepherd</option>
+         <option value="bulldog">Bulldog</option>
+         <option value="poodle">poodle</option>
+        </select>
+		
+		<br/>
+		
+		<input type="submit" id="submit" value="Submit">
+ 
 	</form>
 	
     <script type="text/javascript" src="./script.js">
